syntax = "proto3";

option csharp_namespace = "Fibertest30.Api";
package fibertest30.graph;

service Graph {
	rpc SendCommand (SendCommandRequest) returns (SendCommandResponse);
}

message SendCommandRequest {
	string command = 1;
	string commandType = 2;
}

message SendCommandResponse {
	bool success = 1;
	string error = 2;
}


